kubernetes/projekt/backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  namespace: cube
  labels:
    app: backend-app
    type: backend
spec:
  template:
    metadata:
      name: backend-app-pod
      labels:
        app: backend-app
        type: backend
    spec:
      containers:
        - name: backend-container
          image: febot50806/backend:latest
          imagePullPolicy: Always
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
      type: backend
