kubernetes/projekt/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: postgres-deployment
  namespace: cube
  labels:
    app: my-postgres
    type: db

spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: my-postgres
        type: db
    spec:
      containers:
        - name: my-postgres-container
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgresvolume
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: postgres-pvc
  replicas: 1
  selector:
    matchLabels:
      type: db
      app: my-postgres
