kubernetes/projekt/backend-debug.yml
apiVersion: v1

kind: Service

metadata:
  name: backend-debug
  namespace: cube
spec:
  type: NodePort
  ports:
    - targetPort: 5000
      port: 5000
      nodePort: 30005
  selector:
    app: backend-app
    type: backend
