kubernetes/projekt/backend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: backend-service
  namespace: cube
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: backend-app
    type: backend
