kubernetes/projekt/frontend-debug.yml
apiVersion: v1

kind: Service

metadata:
  name: frontend-debug
  namespace: cube
spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 30003
  selector:
      app: frontend-app
      type: frontend
