kubernetes/projekt/frontend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  namespace: cube
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector:
      app: frontend-app
      type: frontend
