kubernetes/projekt/ingress.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-service
  namespace: cube
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/query-routing: default/query-routing

spec:
  rules:
    - http:
        paths:
          - path: /uuid
            backend:
              serviceName: backend-service
              servicePort: 5000
          - path: /fuelAvg
            backend:
              serviceName: backend-service
              servicePort: 5000
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 5000
          - path: /values
            backend:
              serviceName: backend-service
              servicePort: 5000
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 3000
